--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=pcpasapas.c2p73z3q22vk.eu-west-3.rds.amazonaws.com
-DB_PORT=3307
-DB_DATABASE=pcpasapas
-DB_USERNAME=pasapas
-DB_PASSWORD=Webzik1411
+DB_HOST=ltnya0pnki2ck9w8.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
+DB_PORT=3306
+DB_DATABASE=smz7yzxqp3ns10iw
+DB_USERNAME=ejw8pqkatyhfjb89
+DB_PASSWORD=ub63xkb42op71s7c
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
