--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "heroku": "vite build && git add . && git commit -m 'build' && git push heroku master"
     },
     "devDependencies": {
         "@inertiajs/inertia": "^0.11.0",
