--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0",
+        "vite-plugin-mkcert": "^1.10.1",
         "vue": "^3.2.31",
         "vue-eslint-parser": "^9.1.0"
     },
