--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-eslint-parser": "^9.1.0"
     },
     "dependencies": {
+        "@vitejs/plugin-basic-ssl": "^0.1.2",
         "pinia": "^2.0.23",
         "prettier": "^2.7.1"
     }
