--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:xNUcn93l35Sy/6MbH96H7qOdYQe4bzsmINPhYB4ZcDU=
 APP_DEBUG=true
 APP_URL=https://pasapas2026.herokuapp.com/
 
+DEV_SERVER_URL=https://localhost:3000
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
