--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:xNUcn93l35Sy/6MbH96H7qOdYQe4bzsmINPhYB4ZcDU=
 APP_DEBUG=true
 APP_URL=https://pasapas2026.herokuapp.com/
