--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=PcPasàPas
 APP_ENV=production
 APP_KEY=base64:xNUcn93l35Sy/6MbH96H7qOdYQe4bzsmINPhYB4ZcDU=
 APP_DEBUG=true
