--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=PcPasàPas
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:xNUcn93l35Sy/6MbH96H7qOdYQe4bzsmINPhYB4ZcDU=
 APP_DEBUG=true
-APP_URL=https://pasapas2026.herokuapp.com/
+APP_URL=
 
 DEV_SERVER_URL=http://localhost:3000
 
