--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ DB_USERNAME=ejw8pqkatyhfjb89
 DB_PASSWORD=ub63xkb42op71s7c
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=memcached
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
