--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=PcPasàPas
 APP_ENV=production
 APP_KEY=base64:xNUcn93l35Sy/6MbH96H7qOdYQe4bzsmINPhYB4ZcDU=
 APP_DEBUG=true
-APP_URL=
+APP_URL=https://pasapas2026.herokuapp.com
 
 DEV_SERVER_URL=http://localhost:3000
 
