--- a/.env
+++ b/.env
@@ -10,12 +10,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=ltnya0pnki2ck9w8.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
-DB_PORT=3306
-DB_DATABASE=smz7yzxqp3ns10iw
-DB_USERNAME=ejw8pqkatyhfjb89
-DB_PASSWORD=ub63xkb42op71s7c
+DB_CONNECTION=pgsql
+DB_HOST=pcpasapas-5074.7tc.cockroachlabs.cloud
+DB_PORT=26257
+DB_DATABASE=defaultdb
+DB_USERNAME=pcpasapas_gmail_com
+DB_PASSWORD=rUJ_TMjD6x6Vso8EmcNmnw
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
